# c-abstract-http

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  C_ABSTRACT_HTTP_OAUTH_PLAN0.md  MODALITY0.md  README.md  USAGE.md  build2.txt  build_msvc2005_wine.cmd  c_abstract_http_clean.sh  check_cplusplus.py  fix_c99_headers.py  fix_quotes.py  format_includes.py  format_includes2.py  gdb_script.txt  inject_cplusplus.py  llm.txt  parse_cdd_flags.cmake  skills.md  sockkets_plan.md  test.cmd  test_wininet.c  vcpkg.json
.github/workflows/: ci.yml
include/c_abstract_http/: actor.h  c_abstract_http.h  cdd_tls.h  cmp_integration.h  coroutine.h  event_loop.h  fs.h  http_android.h  http_apple.h  http_aria2.h  http_curl.h  http_fetch.h  http_libevent.h  http_libsoup3.h  http_libuv.h  http_lsquic.h  http_msh3.h  http_nghttp3.h  http_picoquic.h  http_raw.h  http_sse.h  http_types.h  http_wasm.h  http_winhttp.h  http_wininet.h  http_ws.h  http_xquic.h  log.h  process.h  str.h  thread_pool.h  transport.h  win_compat_sym.h
scripts/: update_badges.py  update_badges.sh  validate_api_signatures.py
src/: actor.c  cdd_tls.c  cmp_integration.c  coroutine.c  crypto_utils.c  crypto_utils.h  event_loop.c  fs.c  fs.h  http_android.c  http_apple.c  http_aria2.c  http_curl.c  http_fetch.c  http_libevent.c  http_libsoup3.c  http_libuv.c  http_lsquic.c  http_msh3.c  http_nghttp3.c  http_picoquic.c  http_raw.c  http_sse.c  http_types.c  http_wasm.c  http_winhttp.c  http_wininet.c  http_ws.c  http_xquic.c  process.c  sse_config.h.in  sse_internal.h  str.c  str.h  thread_pool.c  transport.c  win_compat_sym.h  ws_config.h.in  ws_internal.h
tests/: CMakeLists.txt  fuzz_sse.c  fuzz_ws.c  main.c  mock_alloc.c  mock_alloc.h  test_actor.h  test_cmp_integration.h  test_coroutine.h  test_coroutine.h.patch.py  test_coverage_fix.c  test_crypto.c  test_event_loop.h  test_http_android.h  test_http_apple.h  test_http_curl.h  test_http_curl_dummy.c  test_http_fetch.h  test_http_libevent.h  test_http_libsoup3.h  test_http_libuv.h  test_http_lsquic.h  test_http_msh3.h  test_http_nghttp3.h  test_http_picoquic.h  test_http_types.h  test_http_wasm.h  test_http_winhttp.h  test_http_wininet.h  test_mock_coverage.h  test_process.h  test_sse.c  test_thread_pool.h  test_tls.h  test_transport.h  test_ws.c
tests/cdd_test_helpers/: cdd_helpers.c  cdd_helpers.h  mock_server.c  mock_server.h
